# wordle-solver

./: README.md  main.py  pyproject.toml
src/wordle_solver/: __init__.py
