[project]
name = "wordle-solver"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anne Sulit", email = "92159716+axsulit@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wordle_solver"]
